--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "mongodb": "^4.12.1",
     "xmlhttprequest": "^1.8.0"
   }
 }
