--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongodb": "^4.12.1",
     "xmlhttprequest": "^1.8.0"
